--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
