--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,12 @@ dependencies {
     // lru
     compile group: 'com.googlecode.concurrentlinkedhashmap', name: 'concurrentlinkedhashmap-lru', version: '1.4.2'
 
+    // time
+    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
+
+    // http client
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
