--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
+
 
     // for java9+ JavaEE/CORBA
     // java.xml.ws
