--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
 
+    // spring
+    compile group: "org.springframework", name: 'spring-core', version: '5.3.3'
+    compile group: "org.springframework", name: 'spring-context', version: '5.3.3'
+    compile group: "org.springframework", name: 'spring-beans', version: '5.3.3'
+    compile group: "org.springframework", name: 'spring-aop', version: '5.3.3'
+    compile group: "org.springframework", name: 'spring-web', version: '5.3.3'
 
     // for java9+ JavaEE/CORBA
     // java.xml.ws
